# judge-ma-di

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  checker.sh  config.json  docker-compose.yml  dockerfile  setup.sh  test.py
src/: helper.rs  isolate.rs  main.rs  rbmq.rs  runner.rs
src/routes/: desc.rs  healthchecker.rs  manifest.rs  mod.rs  submission.rs  task.rs
tasks/1/: manifest.json
tasks/1/testcases/: 2.in
tasks/2/: manifest.json
tasks/2/testcases/: 3.in
tasks/a_plus_b/: manifest.json
tasks/a_plus_b_sub/: manifest.json
tasks/a_plus_b_sub/testcases/: 3.sol  5.in
