[package]
name = "judge-ma-di"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
lapin = "2.1.1"
tokio = { version = "1.20.4", features = ["full"] }
uuid = { version = "1.1.1", features = ["v4"] }
tokio-stream = "0.1"
serde_json = "1.0.114"
serde = "1.0.197"
axum = {version="0.7.4", features = ['multipart']}
tower-http = {version = "0.5.2", features = ['cors']}
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tower = "0.4.13"
log = "0.4.21"
anyhow = "1.0.81"
tokio-postgres = {version = "0.7.10", features = ["with-serde_json-1"]}
dotenv = "0.15.0"
postgres-openssl = "0.5.0"
openssl = "0.10.41"
zip-extract = "0.1.3"
http = "1.1.0"
